--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "start": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
     "dev": "ts-node src/server.ts",
@@ -21,6 +23,9 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
     "@types/sqlite3": "^3.1.11",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "eslint": "^8.57.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
