--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "express": "^4.18.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
