--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,11 +16,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
     "@types/sqlite3": "^3.1.11",
